# handobject_dataset_creator

./: .gitignore  CMakeLists.txt  README.md  environment.yml  extract_patches.py  mano_fitting.py
assets/: hand_joint_label_ordering.txt  hand_joint_labels.txt  initial_pose_guess.txt  subordinate_camera_color_extrinsics.txt
assets/mano/: mano_faces.pkl
config/: extract_patches.conf  handobject_registration.conf  mano_fitting.conf  scene_viewer.conf
include/: MultiPlayback.hpp  playback.c
include/utils/: io.hpp  math.hpp  point_cloud.hpp
src/: handobject_registration.cpp  scene_viewer.cpp
